<resources>
    <string name="app_name">Cars Store</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="dummy_model">mfl001</string>
    <string name="dummy_price">$12456</string>
    <string name="dummy_category">some category</string>
    <string name="seats">Seats</string>
    <string name="state">State</string>
    <string name="release_date">Release Date</string>
    <string name="dummy_seats">4</string>
    <string name="dummy_state">New</string>
    <string name="dummy_date">12/12/24</string>
    <string name="category_value">Category Value</string>
    <string name="dummy_category_value">1020 GHz</string>
    <string-array name="state_car">
        <item>New</item>
        <item>Used</item>
    </string-array>
</resources>