<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdH33"
        app:layout_constraintGuide_percent=".30"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etModel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_model"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etPrice"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_price"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/etModel"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etSeats"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSeats"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_seats"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/etPrice"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sState"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sState"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:entries="@array/state_car"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:spinnerMode="dialog"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/etRelease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintTop_toBottomOf="@id/etSeats" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRelease"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_date"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/sState"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etCategory"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sCategory"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_category"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        android:spinnerMode="dialog"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/etRelease"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvCategoryValue"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCategory"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_category"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/etRelease"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toStartOf="@id/btnDiscardCat"
        app:layout_constraintBottom_toTopOf="@+id/tvCategoryValue"/>

    <ImageView
        android:id="@+id/btnDiscardCat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:tint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/etRelease"
        app:layout_constraintStart_toEndOf="@id/etCategory"
        app:layout_constraintEnd_toStartOf="@id/btnAddCat"
        app:layout_constraintBottom_toTopOf="@+id/tvCategoryValue"/>

    <ImageView
        android:id="@+id/btnAddCat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_done"
        app:tint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/etRelease"
        app:layout_constraintStart_toEndOf="@id/btnDiscardCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvCategoryValue"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvCategoryValue"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_category_value"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/sCategory"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbModel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/model"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lbPrice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/lbModel"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lbSeats"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbSeats"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/seats"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/lbPrice"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lbState"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbState"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/state"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/lbSeats"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lbRelease"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbRelease"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/release_date"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/lbState"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lbCategory"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbCategory"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/lbRelease"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lbCategoryValue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbCategoryValue"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/category_value"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/lbCategory"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_circle"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</merge>

